--- a/src/app/components/catalogue/catalogue.component.css
+++ b/src/app/components/catalogue/catalogue.component.css
@@ -265,3 +265,35 @@ body {
   box-shadow: 5px 6px 6px 2px #e9ecef;
   padding: 4px
 }
+.row {
+  display: flex;
+  width: 100%;
+}
+
+.container-sm{
+  margin-top: 70px;
+  margin-left: 250px;
+  margin-right: 70px;
+  margin-bottom: 100px;
+}
+.btn.btn-primary{
+  margin-top: 85px;
+  margin-bottom: 25px;
+
+}
+.card-tittle{
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+.table.table-sm{
+  margin-top: 90px;
+}
+
+.position.top-50.start-50{
+  margin-bottom: 25px;
+}
+
+.position-absolute.start-50.translate-middle{
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
