--- a/src/app/components/product-details/product-details.component.html
+++ b/src/app/components/product-details/product-details.component.html
@@ -23,11 +23,12 @@
           <h1 class="card-title" style="margin: 10px">{{product.product_name}}</h1>
           <h5 class="card-text" style="margin: 10px">{{product.details}}</h5>
           <h5 class="card-text" style="margin: 10px">Bs. {{product.costProduct}}</h5>
+          
 
           <dl class="" style="margin: 10px">
             <dt><p class="card-text">Talla
               <select id = "inputSize" name="size" style="margin: 10px" ngModel #quantity="ngModel">
-                <option selected>L</option>
+                <option selected>XXS</option>
                 <option value="1">XS</option>
                 <option value="2">S</option>
                 <option value="3">M</option>
@@ -36,17 +37,18 @@
                 <option value="6">XXL</option>
               </select>
             </p></dt>
-
+            
           </dl>
         </div>
 
         <div  style="margin: 30px">
-          <button type="button" style="margin: 10px" class="btn btn-dark" [routerLink]="['/cart']">
+          
+          <button *ngIf="product.stock>0" type="button" style="margin: 10px" class="btn btn-dark" [routerLink]="['/cart']">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart4" viewBox="0 0 16 16">
               <path d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l.5 2H5V5H3.14zM6 5v2h2V5H6zm3 0v2h2V5H9zm3 0v2h1.36l.5-2H12zm1.11 3H12v2h.61l.5-2zM11 8H9v2h2V8zM8 8H6v2h2V8zM5 8H3.89l.5 2H5V8zm0 5a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z"/>
             </svg> Agregar al carrito </button>
 
-          <button type="button" class="btn btn-dark" [routerLink]="['/order']">
+          <button *ngIf="product.stock<=0"type="button" class="btn btn-dark" [routerLink]="['/order']">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bag-plus" viewBox="0 0 16 16">
               <path fill-rule="evenodd" d="M8 7.5a.5.5 0 0 1 .5.5v1.5H10a.5.5 0 0 1 0 1H8.5V12a.5.5 0 0 1-1 0v-1.5H6a.5.5 0 0 1 0-1h1.5V8a.5.5 0 0 1 .5-.5z"/>
               <path d="M8 1a2.5 2.5 0 0 1 2.5 2.5V4h-5v-.5A2.5 2.5 0 0 1 8 1zm3.5 3v-.5a3.5 3.5 0 1 0-7 0V4H1v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V4h-3.5zM2 5h12v9a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V5z"/>
