--- a/src/app/components/products/form-product.component.html
+++ b/src/app/components/products/form-product.component.html
@@ -1,59 +1,68 @@
-<div class="container">
-    <div class="card-body">
-        <h5 class="card-title">{{titulo}}</h5>
-        <form>
-            <div class="form-group row">
-                <label for ="product_name" class="col-form-label col-sm-2">Producto</label>
-                <div class="col-sm-6">
+<div class="container-sm">
+
+    <div class="card" style="width: 60rem;">
+      <div class="card-body">
+  
+        <div class="position-absolute start-50 translate-middle">
+          <h1 class="card-title"><b>Registrar Productos</b></h1>
+        </div>
+  
+            <form  class="row g-3 needs-validation" novalidate  >
+
+                <div class="col-md-12 position-relative">
+                    <label for ="product_name">Producto</label>
                     <input type="text" class="form-control" name="product_name" [(ngModel)]="product.product_name" >
                 </div>
 
-            </div>
-            <div class="form-group row">
-                <label for ="details" class="col-form-label col-sm-2">Detalles</label>
-                <div class="col-sm-6">
+                <div class="col-md-12 position-relative">
+                    <label for ="details">Detalles</label>
                     <input type="text" class="form-control" name="details" [(ngModel)]="product.details" >
                 </div>
-
-            </div>
             
-            <div class="form-group row">
-                <label for ="size" class="col-form-label col-sm-2">Talla</label>
-                <div class="col-sm-6">
-                    <input type="text" class="form-control" name="size" [(ngModel)]="product.size" >
+                <div class="col-md-6 position-relative">
+                    <label for ="size">Talla</label>
+                   
+      
+              <select id = "inputSize" name="size" style="margin: 10px" [(ngModel)]="product.size">
+                <option selected>XXS</option>
+                <option value="1">XS</option>
+                <option value="2">S</option>
+                <option value="3">M</option>
+                <option value="4">L</option>
+                <option value="5">XL</option>
+                <option value="6">XXL</option>
+              </select>
+
+            
+            
+
+
+                    <!-- <input type="text" class="form-control" name="size" [(ngModel)]="product.size" > -->
                 </div>
+                
 
-            </div>
-
-            <div class="form-group row">
-                <label for ="color" class="col-form-label col-sm-2">Color</label>
-                <div class="col-sm-6">
+                <div class="col-md-6 position-relative">
+                    <label for ="color">Color</label>
                     <input type="text" class="form-control" name="color" [(ngModel)]="product.color" >
                 </div>
 
-            </div>
-            <div class="form-group row">
-                <label for ="costProduct" class="col-form-label col-sm-2">Precio</label>
-                <div class="col-sm-6">
+                <div class="col-md-6 position-relative">
+                    <label for ="costProduct" >Precio</label>
                     <input type="text" class="form-control" name="costProduct" [(ngModel)]="product.costProduct" >
                 </div>
 
-            </div>
-            <div class="form-group row">
-                <label for ="status" class="col-form-label col-sm-2">Stock</label>
-                <div class="col-sm-6">
+                <div class="col-md-6 position-relative">
+                    <label for ="status" >Stock</label>
                     <input type="text" class="form-control" name="stock" [(ngModel)]="product.stock" >
                 </div>
-
-            </div>
-            <div class="form-group row">
-                <label for ="categoria" class="col-form-label col-sm-2">Categoria</label>
-                <div class="col-sm-6">
+           
+                  
+                <div class="col-md-12 position-relative">
+                    <label for ="categoria" >Categoria</label>
                     <input type="text" class="form-control" name="categoria" [(ngModel)]="product.categoria_categoria_id" >
                 </div>
 
-            </div>
-
+            
             <!-- <button class="btn btn-success" role="button" (click)='create()' *ngIf="!product.product_id else elseBlock">Agregar</button> -->
             <!-- <div class="custom-file">
                 <input type="file" class="custom-file-input" id="imagen" #imagenInputFile  
@@ -66,16 +75,23 @@
                     <img class="image-thumbnail" style="max-height: 100px" *ngFor="let im of imagenMin" [src]="im">
                 </div>
             </div> -->
-            <button class="btn btn-success" role="button" (click)='create()' *ngIf="!product.product_id else elseBlock">Agregar</button>
-            
-            <ng-template #elseBlock>
-                <button class="btn btn-success" role="button" (click)='update()'>Actualizar</button>
-            </ng-template>
 
+            <div class="col-md-6 " class="text-center well">
+                <div class="position top-50 start-50">
+    
+                        <button class="btn btn-dark" style="margin: 10px" type="button" [routerLink]="['/products']">Atrás</button>
+    
+                        <button class="btn btn-success" style="margin: 10px" type="submit" role="button" (click)='create()'*ngIf="!product.product_id else elseBlock">Crear producto</button>
+                        <ng-template #elseBlock>
+                            <button class="btn btn-success" style="margin: 10px" type="submit" role="button" (click)='update()'>Actualizar</button>
+                        </ng-template>
+    
+    
+                </div>
+            </div>
         </form>
     </div>
 
 
 
-    <p>form-product works!</p>
 </div>
