--- a/src/app/components/product-details/product-details.component.html
+++ b/src/app/components/product-details/product-details.component.html
@@ -23,13 +23,13 @@
           <h1 class="card-title" style="margin: 10px">{{product.product_name}}</h1>
           <h5 class="card-text" style="margin: 10px">{{product.details}}</h5>
           <h5 class="card-text" style="margin: 10px">Bs. {{product.costProduct}}</h5>
-          
+
 
           <dl class="" style="margin: 10px">
-            <dt><p class="card-text">Talla
+            <dt><h5 class="card-text" for ="size">Talla
 
-              <select id = "inputSize" name="size" style="margin: 10px" ngModel #size="ngModel">
-                <option selected>L</option>
+              <select id = "inputSize" name="size" style="margin: 10px" [(ngModel)]="product.size">
+                <option selected>XXS</option>
                 <option value="1">XS</option>
                 <option value="2">S</option>
                 <option value="3">M</option>
@@ -37,14 +37,19 @@
                 <option value="5">XL</option>
                 <option value="6">XXL</option>
               </select>
-            </p></dt>
-            
+            </h5></dt>
           </dl>
+
+          <div class="form-inline" style="margin: 10px">
+            <h5 for ="quantity" >Cantidad</h5>
+            <input style="margin: 10px" type="text" class="form-control" name="quantity" [(ngModel)]="product.quantity" >
+        </div>
+
         </div>
 
         <div  style="margin: 30px">
 
-          <button *ngIf="product.stock>0" type="submit" style="margin: 10px" class="btn btn-dark"   role="button">
+          <button *ngIf="product.stock>0" type="submit" style="margin: 10px" class="btn btn-dark" role="button" [routerLink]="['/cart']">
 
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart4" viewBox="0 0 16 16">
               <path d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l.5 2H5V5H3.14zM6 5v2h2V5H6zm3 0v2h2V5H9zm3 0v2h1.36l.5-2H12zm1.11 3H12v2h.61l.5-2zM11 8H9v2h2V8zM8 8H6v2h2V8zM5 8H3.89l.5 2H5V8zm0 5a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z"/>
