--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -41,25 +41,17 @@
                         </dl>
                       </div>
 
-                      <div class="col-auto">
-                        <dl>
-                          <dt><h5 class="card-text">Cantidad
-                            <select id = "inputSize" name="size" style="margin: 10px" ngModel #quantity="ngModel">
-                              <option selected>1</option>
-                              <option value="1">1</option>
-                              <option value="2">2</option>
-                              <option value="3">3</option>
-                              <option value="4">4</option>
-                              <option value="5">5</option>
-                            </select>
-                          </h5></dt>
-                        </dl>
+                      <div class="form-inline"  style="margin: 10px">
+
+                          <h5 for ="quantity" >Cantidad</h5>
+                          <input type="text" class="form-control" name="quantity" style="margin: 10px" >
                       </div>
                       </div>
+
 
 
                       <div class="form-inline" style="margin: 10px">
-                        <h5 for="card-text">Color</h5>
+                        <h5 for="color">Color</h5>
                         <input type="text" class="form-control" id="color" required  style="margin: 10px">
                       </div>
 
