Fixing client and add components edit client

--- a/src/app/components/list-clients/list-clients.component.html
+++ b/src/app/components/list-clients/list-clients.component.html
@@ -32,7 +32,7 @@
               <div>
             
                 <button type="button"style="margin: 10px" name ="btnView" class="btn btn-info" [routerLink]="['/profile-client', client.client_id]" >Ver Perfil</button>
-  
+                <button class="btn btn-success" style="margin: 10px" type="btnEdit" [routerLink]="['/client-edit', client.client_id]">Editar</button>
               </div>
               </td>
             </tr>
