--- a/src/app/components/profile-client/profile-client.component.css
+++ b/src/app/components/profile-client/profile-client.component.css
@@ -4,7 +4,7 @@
   height: 300px;
   height: 370px;
   padding: 12px;
-  background: url(../../../assets/img/m1.jpeg) ;
+  background: url(../../../assets/img/p5.jpeg) ;
 }
 .avatar
 {
