--- a/src/app/components/profile-client/profile-client.component.html
+++ b/src/app/components/profile-client/profile-client.component.html
@@ -3,7 +3,7 @@
 
   </div>
   
-  <div class="container main-container animated fadeIn" style="background-color: #E7C7DD " >
+  <div class="container main-container animated fadeIn" style="background-color: #D4E6F1  " >
     <div class="container text-center" >
       <section id="top">
         
