--- a/src/app/components/sesion/sesion.component.html
+++ b/src/app/components/sesion/sesion.component.html
@@ -43,6 +43,20 @@
 
 </div>
 </div>
+<div class="form-group animated fadeIn fast">
+  <div class="form-group col-md-6">
+  <label for="inputclientname">Telefono</label>
+ 
+    <input type="number" class="form-control" name="email" [(ngModel)]="client.telephone" >
+
+</div>
+<div class="form-group col-md-6">
+  <label for="inputclientname">Direccion</label>
+ 
+    <input type="email" class="form-control" name="email" [(ngModel)]="client.address" >
+
+</div>
+</div>
 
 <div class="form-group animated fadeIn fast">
   <div class="form-group col-md-6">
