--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -41,24 +41,30 @@
                         </dl>
                       </div>
 
-                      <div class="form-inline"  style="margin: 10px">
-
-                          <h5 for ="quantity" >Cantidad</h5>
-                          <input type="text" class="form-control" name="quantity" style="margin: 10px" >
-                      </div>
-                      </div>
-
-
-
                       <div class="form-inline" style="margin: 10px">
-                        <h5 for="color">Color</h5>
-                        <input type="text" class="form-control" id="color" required  style="margin: 10px">
+                        <h5 for ="quantity" >Cantidad</h5>
+                        <input type="text" class="form-control" id="inputquantity1" name="quantity1" ngModel #quantity1="ngModel"
+                              [class.is-invalid]="quantity1.invalid && quantity1.touched"
+                              minlength="1"
+                              
+                              pattern="^\+?\d{2,}"
+                              required >
+                          <small class="form-text text-danger" *ngIf="quantity1.invalid && quantity1.touched">El campo es obligatorio</small>
+                      
+                    </div>
                       </div>
-
-
-
+                      <div class="form-inline" style="margin: 10px">
+                        <h5 for ="quantity" >color</h5>
+                        <input type="text" class="form-control" id="color" name="color" ngModel #color="ngModel"
+                              [class.is-invalid]="color.invalid && color.touched"
+                              minlength="1"
+                              maxlength="1"
+                              pattern="^\+?\d{2,}"
+                              required >
+                          <small class="form-text text-danger" *ngIf="color.invalid && color.touched">El campo es obligatorio </small>
+                      </div>
                         <div class="col-12" class="text-center" >
-                          <button class="btn btn-primary" type="submit">Pedir producto</button>
+                          <button class="btn btn-primary" type="submit"  [routerLink]="['/pedidos']">Pedir producto</button>
                         </div>
 
                       </form>
