fixing user-admin form

--- a/src/app/components/user/user-admin/user-form.component.html
+++ b/src/app/components/user/user-admin/user-form.component.html
@@ -41,7 +41,7 @@
 
       <div class="col-md-6 position-relative">
         <label for="inputRol">Rol</label>
-        <input type="rol" class="form-control" id="inputRol"  name="rol" [(ngModel)]="rol" >
+        <input type="rol" class="form-control" id="inputRol"  name="rol" [(ngModel)]="user.rol" >
 
 
 
