--- a/src/app/components/user/user-login/user-login.component.html
+++ b/src/app/components/user/user-login/user-login.component.html
@@ -28,12 +28,14 @@
 
                   <div class="form-outline mb-4">
                     <h5 class="form-label" for="form2Example17">Nombre de usuario</h5>
-                    <input type="username" id="form2Example17" class="form-control form-control-lg" />
+                    <input type="username" id="form2Example17" class="form-control form-control-lg"
+                    name="username" [(ngModel)]="user.username" />
                   </div>
 
                   <div class="form-outline mb-4">
                     <h5 class="form-label" for="form2Example27">Contraseña</h5>
-                    <input type="password" id="form2Example27" class="form-control form-control-lg" />
+                    <input type="password" id="form2Example27" class="form-control form-control-lg"
+                    name="username" [(ngModel)]="user.password"/>
                   </div>
 
                   <div class="pt-1 mb-4">
