--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -1,1 +1,27 @@
-<p>card works!</p>
+<div class="container py-5 text-center">
+
+  <h1 style="color: black;">Lista de Tarjetas</h1>
+  <br>
+
+  <div class="row row-cols-1 row-cols-md-3 g-4 card-deck">
+    <div class="col" *ngFor="let card of card">
+      <div class="card h-100">
+        <img
+          src="https://media.wired.com/photos/5ef54fb739276c2836968826/master/pass/Business_karat-card.jpg"
+          class="card-img-top"
+          alt="..."
+        />
+        <div class="card-body">
+          <h5 class="card-title">{{card.card_name}}</h5>
+          <p class="card-text">
+            Tarjeta:{{card.card_number}}
+            Expiración: {{ card.expiration_month }}/{{ card.expiration_year }}
+          </p>
+        </div>
+        <div class="card-footer">
+          <small class="text-muted">Last updated 3 mins ago</small>
+        </div>
+      </div>
+    </div>
+
+</div>
