--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -13,7 +13,7 @@
 
   <br>
   <div class="position-absolute top-20 start-20">
-    <button class="btn btn-dark" type="button" style="margin: 10px" [routerLink]="['/card/card-form']">
+    <button class="btn btn-dark" type="button" [routerLink]="['/card/card-form']">
       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-credit-card-2-front" viewBox="0 0 16 16">
         <path d="M14 3a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1h12zM2 2a2 2 0 0 0-2 2v8a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H2z"/>
         <path d="M2 5.5a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1-.5-.5v-1zm0 3a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm0 2a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 0 1h-1a.5.5 0 0 1-.5-.5zm3 0a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 0 1h-1a.5.5 0 0 1-.5-.5zm3 0a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 0 1h-1a.5.5 0 0 1-.5-.5zm3 0a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 0 1h-1a.5.5 0 0 1-.5-.5z"/>
@@ -32,7 +32,7 @@
         <div class="card-body">
           <h4 class="card-title"><strong>{{card.card_name}}</strong></h4>
           <p class="card-text">
-            <strong>Tarjeta:</strong> {{card.card_number}}<br>
+            <strong>Tarjeta:</strong> {{card.card_number | pipecard}}<br>
            <strong>Expiración: </strong> {{ card.expiration_month }}/{{ card.expiration_year }}
 
           </p>
