--- a/src/app/components/user/user-login/user-login.component.html
+++ b/src/app/components/user/user-login/user-login.component.html
@@ -41,7 +41,9 @@
                   <div class="pt-1 mb-4">
                     <button class="btn btn-dark btn-lg btn-block" type="button">Iniciar Sesión</button>
                   </div>
-
+                   <div align="center">
+                    <a class="card-link"style="font-size: 17px; color: black;"  [routerLink]="['/sesion']">Crea tu cuenta ISI</a>
+                   </div>
                 </form>
 
               </div>
