--- a/src/app/components/client-edit/client-edit.component.html
+++ b/src/app/components/client-edit/client-edit.component.html
@@ -12,7 +12,7 @@
         <div class="col-md-6 position-relative"><br><br>
   
           <label for="inputFirstname">Nombre</label>
-          <input type="text" class="form-control" id="inputName"  name="name" [(ngModel)]="client.name"
+          <input type="text" class="form-control" id="inputName"  name="name" [(ngModel)]="user.name"
           >
   
         </div>
@@ -20,14 +20,14 @@
         <div class="col-md-6 position-relative"><br><br>
   
             <label for="inputLastname">Apellido</label>
-            <input type="text" class="form-control" id="inputLastname" name="lastname" [(ngModel)]="client.lastname"
+            <input type="text" class="form-control" id="inputLastname" name="lastname" [(ngModel)]="user.lastname"
             >  
         </div>
 
         <div class="col-md-6 position-relative">
   
           <label for="inputEmail">Telefono</label>
-          <input type="email" class="form-control" id="inputEmail"  name="email" [(ngModel)]="client.telephone"
+          <input type="email" class="form-control" id="inputEmail"  name="email" [(ngModel)]="user.telephone"
           >
         </div>
   
@@ -35,16 +35,11 @@
         <div class="col-md-6 position-relative">
   
           <label for="inputFirstname">Nombre de usuario</label>
-          <input type="text" class="form-control" id="inputUsername"  name="username" [(ngModel)]="client.username" >
+          <input type="text" class="form-control" id="inputUsername"  name="username" [(ngModel)]="user.username" >
         </div>
 
 
-        <div class="col-md-6 position-relative">
   
-            <label for="inputEmail">Direccion</label>
-            <input type="email" class="form-control" id="inputEmail"  name="email" [(ngModel)]="client.telephone"
-            >
-          </div>
   
         <div class="col-md-6 " class="text-center well">
           <div class="position top-50 start-50">
