--- a/src/app/components/profile-client/profile-client.component.html
+++ b/src/app/components/profile-client/profile-client.component.html
@@ -7,7 +7,7 @@
     <div class="container text-center" >
       <section id="top">
         
-        <h2>Usuario : {{client.username}}</h2>
+        <h2>Usuario : {{user.username}}</h2>
       </section>
     </div>
     
@@ -48,7 +48,7 @@
                       
                     </div>
                     <div class="col-sm-9 text-secondary" >
-                      {{client.name}}
+                      {{user.name}}
                     </div>
                     
                   </div>
@@ -62,7 +62,7 @@
                       <h6 class="mb-0">Apellido</h6>
                     </div>
                     <div class="col-sm-9 text-secondary">
-                      {{client.lastname}}
+                      {{user.lastname}}
                     </div>
                   </div>
                   <hr>
@@ -71,7 +71,7 @@
                       <h6 class="mb-0">Email</h6>
                     </div>
                     <div class="col-sm-9 text-secondary">
-                      {{client.email}}
+                      {{user.email}}
                     </div>
                   </div>
                   <hr>
@@ -80,32 +80,25 @@
                       <h6 class="mb-0">Nombre de Usuario</h6>
                     </div>
                     <div class="col-sm-9 text-secondary">
-                      {{client.username}}
+                      {{user.username}}
                     </div>
                   </div>
                   <hr>
-                <div class="row">
-                  <div class="col-sm-3">
-                    <h6 class="mb-0">telefono</h6>
-                  </div>
-                  <div class="col-sm-9 text-secondary">
-                    {{client.telephone}}
-                  </div>
-                  <hr>
+
+
                   
-                  
-                </div>
-                <div class="row">
+                  <div class="row">
                     <div class="col-sm-3">
-                      <h6 class="mb-0">Direccion</h6>
+                      <h6 class="mb-0">Telefono</h6>
                     </div>
                     <div class="col-sm-9 text-secondary">
-                      {{client.address}}
+                      {{user.telephone}}
                     </div>
                   </div>
-                 
-                
-
+                  <hr>
+               
+                  
+              
                 </div>
                
                
