--- a/src/app/components/receipt/receipt.component.css
+++ b/src/app/components/receipt/receipt.component.css
@@ -25,7 +25,7 @@ h1 {
     height: 500px;
     box-sizing: border-box;
     margin: 20px 60px;
-    background-color: #F9FAF6;
+    background-color: #FDFEFE ;
   }
   .content > h2 {
     margin: 20px;
