--- a/src/app/components/receipt/receipt.component.html
+++ b/src/app/components/receipt/receipt.component.html
@@ -1,70 +1,19 @@
-<h1>RECIBO</h1>
+
 <section class="container">
   <div class="content">
     
-    <!--Purchase information according to the selected payment plan -->
-    <hr>
-                  <div class="row">
-                    <div class="col-sm-3">
-                      <h5 class="mb-0"><strong>Nombre: </strong></h5>
-                    </div>
-                     <div class="col-sm-3">
-                      <h5 class="mb-0"><strong>Apellido: </strong></h5>
-                    </div>
-                    <div class="col-sm-9 text-secondary">
-                      
-                    </div>
-                  </div>
-      <hr>
-
-   <hr>
-                  <div class="row">
-                    <div class="col-sm-3">
-                      <h5 class="mb-0"><strong>Producto:</strong></h5>
-                    </div>
-                    <div class="col-sm-9 text-secondary">
-                      
-                    </div>
-                  </div>
-      <hr>      
-       <hr>
-                  <div class="row">
-                    <div class="col-sm-3">
-                      <h5 class="mb-0"><strong>Ciudad:</strong></h5>
-                    </div>
-                    <div class="col-sm-9 text-secondary">
-                      
-                    </div>
-                  </div>
-      <hr>
-      
-
-
-
-      <hr>
-                  <div class="row">
-                    <div class="col-sm-3">
-                      <h5 class="mb-0"><strong>Total a pagar:</strong></h5>
-                    </div>
-                    <div class="col-sm-9 text-secondary">
-                      
-                    </div>
-                  </div>
-      <hr>
-
-       <hr>
-                  <div class="row">
-                    <div class="col-sm-3">
-                      <h5 class="mb-0"><strong>Fecha:</strong></h5>
-                    </div>
-                    <div class="col-sm-9 text-secondary">
-                      
-                    </div>
-                  </div>
-      <hr>
-
-            
-                  <div class="pt-1 mb-3">
+    
+    <img src="assets/img/logo.jpeg"  width="120" height="120" align="right"/> 
+    
+  <h1 style="text-align:center">RECIBO ISI</h1>
+    <h2 class="text"><strong>Nombre: </strong></h2>
+    <h2 class="text"><strong>Productos: </strong></h2>
+    <h2 class="text"> <strong>Total a Pagar: </strong></h2>
+    
+    <h2 class="text"><strong>Fecha: </strong></h2>
+    <h2 class="text"><strong>Ciudad: </strong></h2>
+ 
+      <div class="pt-1 mb-3">
                   <button type="button"style="margin: 10px" class="btn btn-dark" [routerLink]="['/catalogue']">
                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-right" viewBox="0 0 16 16">
                         <path fill-rule="evenodd" d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0v2z"/>
@@ -73,5 +22,8 @@
                   SALIR</button>
                   
                   </div>
+
+            
+                
   </div>
 </section>
