--- a/src/app/components/sesion/sesion.component.html
+++ b/src/app/components/sesion/sesion.component.html
@@ -1,75 +1,76 @@
+<h1 class="display-4 animated fadeIn fast" ></h1>
 <div class="container main-container">
   <div class="jumbotron">
 
-      <h1 class="display-4 animated fadeIn fast">Forma parte de nuestra Tienda virtual ISI</h1>
+      <h1 class="display-4 animated fadeIn fast" style="text-align:center"  > <strong>Registrate a la Tienda virtual ISI</strong></h1>
       <hr class="my-4 animated fadeIn">
       
   
       <form class="row g-3 needs-validation" novalidate>
-    <p class="animated fadeIn">Registrate y disfruta de nuestros productos</p>
-        <div class="form-group animated fadeIn fast">
-          <div class="form-group col-md-6">
-          <label for="inputclientname">Nombre de usuario</label>
-         
-            <input type="text" class="form-control" name="username" [(ngModel)]="client.username" >
-       
-      </div>
-    </div>
-
-    <div class="form-group animated fadeIn fast">
+    <p class="animated fadeIn" style="text-align:center">Registrate y disfruta de nuestros productos</p>
+        
+   <div class="row">
       <div class="form-group col-md-6">
       <label for="inputclientname">Nombre</label>
      
         <input type="text" class="form-control" name="name" [(ngModel)]="client.name" >
    
   </div>
-</div>
-
-<div class="form-group animated fadeIn fast">
   <div class="form-group col-md-6">
   <label for="inputclientname">Apellido</label>
  
     <input type="text" class="form-control" name="lastname" [(ngModel)]="client.lastname" >
 
-</div>
+   </div>
+
 </div>
 
+<div class="row">
+          <div class="form-group col-md-6">
+          <label for="inputclientname">Nombre de usuario</label>
+            <input type="text" class="form-control" name="username" [(ngModel)]="client.username" >
+      </div>
+       <div class="form-group col-md-6">
+          <label for="inputclientname">Telefono</label>
+            <input type="number" class="form-control" name="username" [(ngModel)]="client.telephone" >
+      </div>
+    </div>
 
-<div class="form-group animated fadeIn fast">
+
+<div class="row">
   <div class="form-group col-md-6">
   <label for="inputclientname">Correo electronico</label>
  
     <input type="email" class="form-control" name="email" [(ngModel)]="client.email" >
 
 </div>
-</div>
-<div class="form-group animated fadeIn fast">
-  <div class="form-group col-md-6">
-  <label for="inputclientname">Telefono</label>
- 
-    <input type="number" class="form-control" name="email" [(ngModel)]="client.telephone" >
-
-</div>
 <div class="form-group col-md-6">
-  <label for="inputclientname">Direccion</label>
- 
-    <input type="email" class="form-control" name="email" [(ngModel)]="client.address" >
-
-</div>
-</div>
-
-<div class="form-group animated fadeIn fast">
-  <div class="form-group col-md-6">
   <label for="inputclientname">Ingresa Contraseña</label>
  
     <input type="password" class="form-control" name="password" [(ngModel)]="client.password" >
 
 </div>
+
 </div>
 
+
+
+
+
           <div class="col-12" class="text-center">
-            <button class="btn btn-primary" role="button" (click)='create()' *ngIf="!client.client_id ">Registrarse</button>
+            <button class="btn btn-dark" role="button" (click)='create()' *ngIf="!client.client_id ">
+            Registrarse 
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-in-right" viewBox="0 0 16 16">
+            <path fill-rule="evenodd" d="M6 3.5a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v9a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-2a.5.5 0 0 0-1 0v2A1.5 1.5 0 0 0 6.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-8A1.5 1.5 0 0 0 5 3.5v2a.5.5 0 0 0 1 0v-2z"/>
+            <path fill-rule="evenodd" d="M11.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H1.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3z"/>
+            </svg>
+            </button>
           </div>
+           <div align="center">
+                    <a class="card-link"style="font-size: 17px; color: black;"  [routerLink]="['/user-login']">Ya tengo cuenta - Iniciar sesion</a>
+          </div>
+
+
     </form>
     <br>
      
