Adding rol user

--- a/src/app/components/user/user-admin/user-admin.component.html
+++ b/src/app/components/user/user-admin/user-admin.component.html
@@ -31,7 +31,7 @@
             <th scope="row">{{user.user_id}}</th>
             <td>{{user.name}}</td>
             <td>{{user.lastname}}</td>
-            <td>{{user.rol}}</td>
+            <td>{{user.rol_id}}</td>
             <td>{{user.username}}</td>
             <td>{{user.password}}</td>
            <td>
