--- a/src/app/components/user/user-admin/user-form.component.html
+++ b/src/app/components/user/user-admin/user-form.component.html
@@ -16,9 +16,6 @@
 
       </div>
 
-
-
-
       <div class="col-md-6 position-relative"><br><br>
 
 
@@ -34,21 +31,18 @@
         <label for="inputEmail">Email</label>
         <input type="email" class="form-control" id="inputEmail"  name="email" [(ngModel)]="user.email"
         >
+      </div>
+      <div class="col-md-6 position-relative">
 
+
+        <select id = "inputSize" name="size" style="margin: 40px" [(ngModel)]="user.rol_id" >
+              
+                <option value="1">administrador</option>
+                <option value="2">Gerente</option>
+                
+      </select>
 
       </div>
-
-
-      <div class="col-md-6 position-relative">
-        <label for="inputRol">Rol</label>
-        <input type="rol" class="form-control" id="inputRol"  name="rol" [(ngModel)]="user.rol" >
-
-
-
-    </div>
-
-
-
 
       <div class="col-md-6 position-relative">
 
