--- a/src/app/components/sesion/sesion.component.html
+++ b/src/app/components/sesion/sesion.component.html
@@ -13,13 +13,13 @@
       <div class="form-group col-md-6">
       <label for="inputclientname">Nombre</label>
      
-        <input type="text" class="form-control" name="name" [(ngModel)]="client.name" >
+        <input type="text" class="form-control" name="name" [(ngModel)]="user.name" >
    
   </div>
   <div class="form-group col-md-6">
   <label for="inputclientname">Apellido</label>
  
-    <input type="text" class="form-control" name="lastname" [(ngModel)]="client.lastname" >
+    <input type="text" class="form-control" name="lastname" [(ngModel)]="user.lastname" >
 
    </div>
 
@@ -28,11 +28,11 @@
 <div class="row">
           <div class="form-group col-md-6">
           <label for="inputclientname">Nombre de usuario</label>
-            <input type="text" class="form-control" name="username" [(ngModel)]="client.username" >
+            <input type="text" class="form-control" name="username" [(ngModel)]="user.username" >
       </div>
        <div class="form-group col-md-6">
           <label for="inputclientname">Telefono</label>
-            <input type="number" class="form-control" name="username" [(ngModel)]="client.telephone" >
+            <input type="number" class="form-control" name="username" [(ngModel)]="user.telephone" >
       </div>
     </div>
 
@@ -41,13 +41,13 @@
   <div class="form-group col-md-6">
   <label for="inputclientname">Correo electronico</label>
  
-    <input type="email" class="form-control" name="email" [(ngModel)]="client.email" >
+    <input type="email" class="form-control" name="email" [(ngModel)]="user.email" >
 
 </div>
 <div class="form-group col-md-6">
   <label for="inputclientname">Ingresa Contraseña</label>
  
-    <input type="password" class="form-control" name="password" [(ngModel)]="client.password" >
+    <input type="password" class="form-control" name="password" [(ngModel)]="user.password" >
 
 </div>
 
@@ -58,7 +58,7 @@
 
 
           <div class="col-12" class="text-center">
-            <button class="btn btn-dark" role="button" (click)='create()' *ngIf="!client.client_id ">
+            <button class="btn btn-dark" role="button" (click)='create()' *ngIf="!user.user_id ">
             Registrarse 
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-in-right" viewBox="0 0 16 16">
             <path fill-rule="evenodd" d="M6 3.5a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v9a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-2a.5.5 0 0 0-1 0v2A1.5 1.5 0 0 0 6.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-8A1.5 1.5 0 0 0 5 3.5v2a.5.5 0 0 0 1 0v-2z"/>
