--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -69,7 +69,7 @@
             <li class="d-flex justify-content-between py-3 border-bottom"><strong class="text-muted">Total</strong>
               <h5 class="font-weight-bold">Bs.</h5>
             </li>
-          </ul><button type="submit" class="btn btn-dark rounded-pill py-2 btn-block" [routerLink]="['/card']">Comprar</button>
+          </ul><button type="submit" class="btn btn-dark rounded-pill py-2 btn-block" [routerLink]="['/cart/card']">Comprar</button>
         </div>
       </div>
 
