--- a/src/app/components/user/user-admin/user-admin.component.html
+++ b/src/app/components/user/user-admin/user-admin.component.html
@@ -36,9 +36,9 @@
             <td>{{user.password}}</td>
            <td>
             <div>
-             <button class="btn btn-success" style="margin: 10px" type="btnEdit" [routerLink]="['/user-admin-update', user.user_id]">Editar</button>
+             <button class="btn btn-success" style="margin: 10px" type="btnEdit" [routerLink]="['/user-admin/user-admin-update', user.user_id]">Editar</button>
              <button  name="btnDelete" style="margin: 10px"  class="btn btn-danger" (click)="delete(user)">Eliminar</button>
-             <button type="button"style="margin: 10px" name ="btnView" class="btn btn-info" [routerLink]="['/profile-view', user.user_id]" >Ver Perfil</button>
+             <button type="button"style="margin: 10px" name ="btnView" class="btn btn-info" [routerLink]="['/user-admin/profile-view', user.user_id]" >Ver Perfil</button>
 
             </div>
             </td>
